--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version":              "0.2.7",
     "description":
 
-      "Optimized retrieval of a set of records from a Strata b-tree.",
+      "Return a minimum size set of items from an MVCC iterator.",
 
     "keywords":
     [
